feature: adicionafront-end em next.js no projeto
